--- a/examples/nbtohtml/demo.css
+++ b/examples/nbtohtml/demo.css
@@ -1,10 +1,27 @@
 /* Page styles for the demo page */
 
 body {
-	max-width: 38rem;
-	margin: auto;
-	padding: 2rem;
+	margin: 0;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Helvetica", "Arial",
 		sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 	line-height: 1.4;
+	background: #eeeeee;
+}
+
+main {
+	max-width: 38rem;
+	margin: auto;
+	padding: 3rem;
+	background: #ffffff;
+}
+
+footer {
+	margin: 1.5rem 0;
+	color: #555555;
+	font-size: 80%;
+	text-align: center;
+}
+
+a {
+	color: inherit;
 }
