Allow scrolling in code/raw cells

--- a/examples/nbtohtml/notebook.css
+++ b/examples/nbtohtml/notebook.css
@@ -16,6 +16,7 @@
 .code-cell,
 .raw-cell {
 	padding: 8px 10px;
+	overflow-y: auto;
 	background: #f5f5f5;
 	border: 1px solid #e0e0e0;
 	border-radius: 2px;
