--- a/examples/nbtohtml/demo.css
+++ b/examples/nbtohtml/demo.css
@@ -1,28 +1,41 @@
 /* Page styles for the demo page */
 
 body {
+	--body-background: #eeeeee;
+	--footer-color: #555555;
+	--text-color: #000000;
+}
+
+@media (prefers-color-scheme: dark) {
+	body {
+		--body-background: #000000;
+		--footer-color: #807f7f;
+		--text-color: #ececec;
+	}
+}
+
+body {
 	margin: 0;
+	color: var(--text-color);
 	font-size: 15px;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Helvetica", "Arial",
 		sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 	line-height: 1.5;
-	background: #eeeeee;
-}
-
-main {
-	max-width: 38rem;
-	margin: auto;
-	padding: 3rem;
-	background: #ffffff;
+	background: var(--body-background);
 }
 
 footer {
 	margin: 1.5rem 0;
-	color: #555555;
-	font-size: 80%;
 	text-align: center;
 }
 
-a {
-	color: inherit;
+.footer-link {
+	color: var(--footer-color);
+	font-size: 90%;
+}
+
+.notebook {
+	max-width: 42rem;
+	margin: auto;
+	padding: 3rem 3rem 3rem 2rem;
 }
